package levin.protobuf;

option java_package = "org.levin.tools.protobuf.rpc.integration";
option java_outer_classname = "MyServiceProtos";
option java_generic_services = true;
option optimize_for = SPEED;

message SearchRequest {
    required string query_string = 1;
    optional int32 page_number = 2;
    optional int32 result_per_page = 3 [ default = 50 ];
}

message SearchResponse {
    required string query_string = 1;
    optional int32 page_number = 2;
    optional int32 result_per_page = 3 [ default = 50 ];
}

service MyService {
    rpc request(SearchRequest) returns(SearchResponse);
}